[gd_scene load_steps=3 format=3 uid="uid://ci6hu2mbofh2f"]

[ext_resource type="Script" uid="uid://dctbkb4elirt3" path="res://Scrips/Interactivos/letter_tile.gd" id="1_yiwfr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yiwfr"]
radius = 44.0454

[node name="LetterTile" type="Area2D"]
script = ExtResource("1_yiwfr")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yiwfr")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
